fixed to use current vercel functions

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
-  "version": 2,
   "functions": {
     "api/icons.js": {
       "runtime": "nodejs20.x"
     }
   },
   "routes": [
-    { "src": "/icons", "dest": "/api/icons.js" }
+    {
+      "src": "/icons",
+      "dest": "/api/icons.js"
+    }
   ]
 }
