--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "online-skillicons",
   "version": "1.0.0",
   "type": "module",
-  "engines": {
-    "node": "20.x"
+  "dependencies": {
+    "node-fetch": "3.3.2"
   }
 }
